--- a/doc/src/examples/send-more-money.page
+++ b/doc/src/examples/send-more-money.page
@@ -24,12 +24,7 @@ equation).
 
 h2. Code
 
-<notextile> 
-  <% example_name = 'send_more_money' %>
-  <% contents = File.readlines("../example/#{example_name}.rb")[1..-1].join %>
-  <% contents = "require 'rubygems'#{$/}require 'gecoder'#{$/}" + contents %>
-  <%= @plugin_manager['Misc/SyntaxHighlighter'].highlight(contents, 'ruby') %> 
-</notextile>
+{exampleScript: send_more_money.rb}
 
 h2. Output
 
