--- a/doc/src/examples/square-tiling.page
+++ b/doc/src/examples/square-tiling.page
@@ -16,12 +16,7 @@ the squares equal the surface area of the rectangle, so all have to be used.
 
 h2. Code
 
-<notextile> 
-  <% example_name = 'square_tiling' %>
-  <% contents = File.readlines("../example/#{example_name}.rb")[1..-1].join %>
-  <% contents = "require 'rubygems'#{$/}require 'gecoder'#{$/}" + contents %>
-  <%= @plugin_manager['Misc/SyntaxHighlighter'].highlight(contents, 'ruby') %> 
-</notextile>
+{exampleScript: square_tiling.rb}
 
 h3. Output
 
