--- a/doc/src/examples/index.page
+++ b/doc/src/examples/index.page
@@ -19,6 +19,7 @@ The following are the examples located in the example directory.
   <dt>"Nonograms - a.k.a. Paint by Numbers":nonogram.html</dt><dd>Uses regular
 expression constraints to solve the popular logic puzzle.</dd>
   <dt>"Square tiling":square-tiling.html</dt><dd>Uses symmetry breaking and implied constraints to speed up the search.</dd>
+  <dt>"Minesweeper":minesweeper.html</dt><dd>Minesweeper solved using constraint programming.</dd>
 </dl>
 
 Additionally, the following websites may be of interest:
