--- a/doc/src/installation.page
+++ b/doc/src/installation.page
@@ -46,7 +46,7 @@ Gecode/R requires Gecode 2.2.0. You can either manually install it or use the
 gem that includes Gecode.
 
 * "Gecode download link":http://www.gecode.org/download.html
-* "Gecode installation instructions":http://www.gecode.org/gecode-doc-latest/PageComp.html
+* "Gecode installation instructions":http://www.gecode.org/doc/2.2.0/reference/PageComp.html
 
 h3. RubyGems
 
